log
Sun Apr 10 14:48:32 UTC 2022: 
 hashmap.c | 68 ++++++++++++++++++++++++++++++++++++++++++++++++++++++---------
 1 file changed, 59 insertions(+), 9 deletions(-)
 tests:  0|0
9f35766
Sun Apr 10 15:15:31 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5fb7e80
Sun Apr 10 15:15:47 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
705e238
Sun Apr 10 15:16:59 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
300ea68
Sun Apr 10 15:18:03 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 30/70
d7772f4
Sun Apr 10 15:23:43 UTC 2022: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  7|4
total_score: 30/70
2336e1e
Sun Apr 10 15:24:47 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|4
total_score: 30/70
918e861
Sun Apr 10 15:29:17 UTC 2022: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  7|4
total_score: 30/70
c1b3f64
Sun Apr 10 15:30:24 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 30/70
8f8aa60
Sun Apr 10 15:31:32 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 30/70
c6f4294
Sun Apr 10 15:32:36 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
aaee1ed
Sun Apr 10 15:41:06 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 30/70
08c9284
Sun Apr 10 16:34:13 UTC 2022: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|0
3f4da68
Sun Apr 10 18:13:39 UTC 2022: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
7d15ce4
Sun Apr 10 18:14:48 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
bac5c15
Sun Apr 10 18:17:21 UTC 2022: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
c686b8a
Sun Apr 10 18:17:58 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b53a65b
Sun Apr 10 18:18:25 UTC 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
3dffa32
Sun Apr 10 18:18:56 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|4
total_score: 30/70
79be07c
Sun Apr 10 18:20:32 UTC 2022: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:126:43: error: ‘cont’ undeclared (first use in this function); did you mean ‘cosl’?
     while(map->buckets[auxKey] != NULL || cont >= map->capacity)
                                           ^~~~
                                           cosl
hashmap.c:126:43: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
761693b
Sun Apr 10 18:21:02 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|4
total_score: 30/70
1b643aa
